[package]
name = "parser"
version = "0.1.0"
edition = "2021"


[dependencies]
unicode-ident = { version = "1.0.18" }
url = "2.5.4"
class = {path = "../class"}
manodae = { path = "../../manodae" }
log = "0.4.27"
span = {path = "../span"}
macros = {path = "../macros"}
quote = "1.0.42"
ast = {path = "../ast"}
engine = {path = "../engine"}
